# gst-lightscapes

./: 0001-Add-URIM-metadata-support-to-qtdemux.patch  README.md  config.h.in  linux_amd64.txt  linux_arm64.txt  meson.build  meson_options.txt
plugins/: meson.build
plugins/lsm/: dlblightning.c  dlblightning.h  dlblsmparse.c  dlblsmparse.h  meson.build
plugins/lsm_sink/: dlblightbasesink.c  dlblightbasesink.h  dlblighttextsink.c  dlblighttextsink.h  meson.build
shim/: common_shim.h  dlb_lightscapes.c  dlb_lightscapes.h
